--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 
-* { box-sizing: border-box;
+/* * { box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
+}*/
 
 .icon {margin-left: 35px;}
 .flex-column a { color: white;
